--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,10 @@ PORT=3000
 # Database (if needed)
 # DATABASE_URL=
 
+# Authentication & Security
+# JWT secret key for token signing/verification
+JWT_SECRET=your-super-secret-key-change-in-production
+
 # Service Configuration
 # Services are initialized once per worker process
 # See src/server/services/ for service implementations
