--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,10 @@ PORT=3000
 # Number of worker processes (defaults to number of CPU cores)
 # CLUSTER_WORKERS=4
 
-# Database (if needed)
-# DATABASE_URL=
+# Database Configuration
+# PostgreSQL connection string for Prisma
+# Format: postgresql://user:password@host:port/database
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/jamyy_dev
 
 # Authentication & Security
 # JWT secret key for token signing/verification
