--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "1.0.0",
   "description": "Minimal Next.js + tRPC boilerplate with TypeScript and Mocha",
   "scripts": {
-    "dev:fe": "next dev",
-    "dev:be": "next dev",
-    "dev": "npm run dev:fe",
+    "dev:fe": "next dev --port 3000",
+    "dev:be": "BACKEND_PORT=3001 node -r ts-node/register -r tsconfig-paths/register src/server/index.ts",
+    "dev": "concurrently \"npm run dev:be\" \"npm run dev:fe\"",
     "build:fe": "next build",
     "build:be": "tsc --outDir dist --declaration",
     "build": "npm run build:fe && npm run build:be",
-    "start": "NODE_ENV=production next start",
-    "build:docker": "docker build -t nextjs-trpc:latest .",
+    "start:be": "BACKEND_PORT=3001 node dist/server/index.js",
+    "start:fe": "NODE_ENV=production next start --port 3000",
+    "start": "concurrently \"npm run start:be\" \"npm run start:fe\"",
+    "build:docker": "docker build -f docker/Dockerfile -t nextjs-trpc:latest .",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,json,md}\"",
     "type-check": "tsc --noEmit",
-    "test": "mocha",
-    "test:watch": "mocha --watch",
+    "test": "npm run build:be && mocha 'dist/**/*.test.js'",
+    "test:watch": "npm run build:be && mocha 'dist/**/*.test.js' --watch",
     "db:generate": "prisma generate",
     "db:migrate:dev": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
@@ -25,6 +27,7 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.4",
     "@david.uhlir/permissions-guard": "^0.0.14",
     "@david.uhlir/services": "^2.0.11",
     "@prisma/client": "^6.18.0",
@@ -33,24 +36,39 @@
     "@trpc/next": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "reflect-metadata": "^0.2.2",
+    "styled-components": "^6.1.19",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.28.0",
+    "@babel/plugin-syntax-decorators": "^7.27.1",
     "@types/chai": "^4.3.17",
+    "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mocha": "^10.0.8",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.35",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "babel-plugin-styled-components": "^2.1.4",
     "chai": "^4.4.1",
+    "concurrently": "^9.2.1",
+    "eslint": "^9.38.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "mocha": "^10.7.0",
     "prettier": "^3.3.3",
     "prisma": "^6.18.0",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3"
   },
   "overrides": {
